--- a/front-end/app/theme.scss
+++ b/front-end/app/theme.scss
@@ -14,3 +14,6 @@ $font-weight-nhg-text-55-roman: 400;
 $font-weight-nhg-text-56-romain-it: 500;
 $font-weight-nhg-text-75-bold: 700; 
 $font-weight-nhg-text-65-bold-it: 700; 
+
+
+$gray-light: #EAE6E6;
